<resources>
    <string name="app_name">MyCashTask</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_up">sign up</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_phone">Enter your phone</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="enter_your_password_again">Enter your password again</string>
    <string name="have_an_account">have an account ?</string>
    <string name="log_in">Log in</string>
    <string name="forgot_the_password">Forgot the password ?</string>
    <string name="don_t_have_an_account">Don’t have an account ?</string>
    <string name="search_for_fav_food">search for fav food..</string>
    <string name="categories">Categories.</string>
    <string name="popular_now">Popular now.</string>
    <string name="trending_now">Trending now.</string>
    <string name="view_all">view all</string>
    <string name="please_enter_your_name">Please enter your name</string>
    <string name="name_must_be_at_least_14_characters">Name must be at least 14 characters</string>
    <string name="please_enter_your_email">Please enter your email</string>
    <string name="please_enter_a_valid_email">Please enter a valid email</string>
    <string name="please_enter_your_password">Please enter your password</string>
    <string name="please_enter_your_phone_number">Please enter your phone number</string>
    <string name="phone_number_must_be_at_least_11_characters">Phone number must be at least 11 characters</string>
    <string name="please_confirm_your_password">Please confirm your password</string>
    <string name="passwords_do_not_match">Passwords do not match</string>
    <string name="password_must_be_at_least_8_characters">Password must be at least 8 characters</string>
</resources>