<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".ui.login.LoginFragment">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/logo_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_90sdp"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_300sdp"
        android:background="@drawable/rounded_shape"
        app:layout_behavior="android.support.design.widget.BottomSheetBehavior"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <androidx.cardview.widget.CardView
                android:id="@+id/cropped_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|top"
                app:cardElevation="@dimen/_3sdp"
                app:cardCornerRadius="@dimen/_8sdp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="@dimen/_110sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:shadowColor="#0000001A"
                    android:text="@string/log_in"
                    android:textAllCaps="true"
                    android:textStyle="bold"
                    android:textSize="@dimen/_13sdp"
                    android:textColor="@color/black"
                    android:visibility="visible"
                    android:gravity="center"
                    android:background="@drawable/cropped_btn" />
            </androidx.cardview.widget.CardView>
            <androidx.constraintlayout.widget.ConstraintLayout
                app:layout_constraintTop_toBottomOf="@id/cropped_btn"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp">
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/email_tv"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_10sdp"
                    app:boxStrokeColor="@color/color_primary"
                    android:hint="@string/enter_your_email"
                    app:hintTextColor="@color/color_primary"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/email_et"
                        android:textCursorDrawable="@null"
                        app:boxStrokeColor="@color/color_primary"
                        android:textColorHint="@color/color_primary"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/black" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/password_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_10sdp"
                    app:boxStrokeColor="@color/color_primary"
                    app:hintTextColor="@color/color_primary"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:hint="@string/enter_your_password"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/email_tv">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/password_et"
                        android:textCursorDrawable="@null"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:textColor="@color/black" />
                </com.google.android.material.textfield.TextInputLayout>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/forgot_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_14sdp"
                    android:textColor="@color/light_gray_color"
                    android:text="@string/forgot_the_password"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/password_tv" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/login_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:backgroundTint="@color/color_primary"
                    android:background="@drawable/filled_btn"
                    android:text="@string/log_in"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/forgot_tv" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/forget_txt1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:text="@string/don_t_have_an_account"
                    android:textColor="@color/dark_color"
                    android:layout_marginStart="@dimen/_80sdp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/login_btn" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/signup_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:text="@string/sign_up"
                    android:textColor="@color/color_primary"
                    app:layout_constraintStart_toEndOf="@id/forget_txt1"
                    app:layout_constraintTop_toBottomOf="@id/login_btn" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>